--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider:
   image_picker:
   animated_notch_bottom_bar: ^1.0.0
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
